[gd_scene load_steps=25 format=3 uid="uid://bkbhhy4vo7thw"]

[ext_resource type="Script" path="res://characters/person/person.gd" id="1_6wwqe"]
[ext_resource type="PackedScene" uid="uid://dcykt2lfye4al" path="res://characters/person/person_model.tscn" id="2_3f21c"]
[ext_resource type="Script" path="res://systems/ai/utility_ai.gd" id="3_5ihs5"]
[ext_resource type="Script" path="res://systems/ai/utility_motives.gd" id="4_hg740"]
[ext_resource type="Script" path="res://systems/ai/utility_weights.gd" id="5_o85ye"]

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rhnq5"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_rm2tg"]
animation = &"IdleHolding"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_x44vy"]
animation = &"PickUp"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0nmja"]
animation = &"Walk"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_w8qj7"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_mmn3u"]
xfade_time = 0.25
switch_mode = 1
advance_mode = 2
advance_expression = "moving	"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wt8qb"]
xfade_time = 0.25
switch_mode = 1
advance_mode = 2
advance_expression = "!moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ywr3o"]
xfade_time = 0.2
advance_expression = "picking_up"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_wwv23"]
xfade_time = 0.5
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ifh8w"]
states/End/position = Vector2(877, 92)
states/Idle/node = SubResource("AnimationNodeAnimation_rhnq5")
states/Idle/position = Vector2(397, 92)
states/IdleHolding/node = SubResource("AnimationNodeAnimation_rm2tg")
states/IdleHolding/position = Vector2(591, 192)
states/PickUp/node = SubResource("AnimationNodeAnimation_x44vy")
states/PickUp/position = Vector2(397, 192)
states/Start/position = Vector2(205, 92)
states/Walk/node = SubResource("AnimationNodeAnimation_0nmja")
states/Walk/position = Vector2(566, 92)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_w8qj7"), "Idle", "Walk", SubResource("AnimationNodeStateMachineTransition_mmn3u"), "Walk", "Idle", SubResource("AnimationNodeStateMachineTransition_wt8qb"), "Idle", "PickUp", SubResource("AnimationNodeStateMachineTransition_ywr3o"), "PickUp", "IdleHolding", SubResource("AnimationNodeStateMachineTransition_wwv23")]
graph_offset = Vector2(-38, -62)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_mex0s"]
radius = 0.3
height = 1.8

[sub_resource type="Resource" id="Resource_ysh3t"]
script = ExtResource("4_hg740")
fullness = 1.0
energy = 1.0
security = 1.0
fun = 1.0
health = 1.0
space = 1.0

[sub_resource type="Curve" id="Curve_26brt"]
_data = [Vector2(0.650558, 1), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="Curve" id="Curve_lxggg"]
_data = [Vector2(0.178439, 1), 0.0, 0.0, 0, 0, Vector2(0.992565, 0.124043), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_yj13s"]
_data = [Vector2(0.598513, 1), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="Curve" id="Curve_sryrr"]
_data = [Vector2(0.591078, 1), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="Curve" id="Curve_17koj"]
_data = [Vector2(0.672862, 1), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="Curve" id="Curve_bxxlw"]
_data = [Vector2(0.635688, 1), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="Resource" id="Resource_simjm"]
script = ExtResource("5_o85ye")
fullness = SubResource("Curve_lxggg")
energy = SubResource("Curve_26brt")
security = SubResource("Curve_17koj")
fun = SubResource("Curve_yj13s")
health = SubResource("Curve_sryrr")
space = SubResource("Curve_bxxlw")

[node name="Person" type="CharacterBody3D"]
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource("1_6wwqe")

[node name="PersonModel" parent="." instance=ExtResource("2_3f21c")]

[node name="Skeleton3D" parent="PersonModel/Armature" index="0"]
bones/0/position = Vector3(0.00408905, 0.535937, -5.30508e-09)
bones/0/rotation = Quaternion(-0.026348, -1.95012e-08, 1.89401e-08, 0.999653)
bones/1/rotation = Quaternion(0.0700954, 4.18288e-08, -2.77282e-08, 0.99754)
bones/2/rotation = Quaternion(-0.0482707, -1.01085e-07, 2.9965e-08, 0.998834)
bones/2/scale = Vector3(1, 1, 1)
bones/3/rotation = Quaternion(0.03717, 1.57321e-07, -1.22551e-08, 0.999309)
bones/4/rotation = Quaternion(-0.000934051, 0.0514708, -0.814237, 0.578246)
bones/4/scale = Vector3(1, 1, 1)
bones/5/rotation = Quaternion(-0.0109095, 0.0348425, -0.459828, 0.887257)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(0.091036, -0.000190587, -0.056309, 0.994254)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.0473233, 0.000669952, 0.0141385, 0.998779)
bones/8/rotation = Quaternion(4.54694e-06, -0.0529699, 0.813622, 0.578977)
bones/8/scale = Vector3(1, 1, 1)
bones/9/rotation = Quaternion(0.00142762, -0.0257121, 0.441791, 0.896749)
bones/9/scale = Vector3(1, 1, 1)
bones/10/rotation = Quaternion(0.0910359, 0.00019066, 0.056309, 0.994254)
bones/11/rotation = Quaternion(-0.0473233, -0.000669986, -0.0141384, 0.998779)
bones/12/rotation = Quaternion(-0.0237538, 0.246553, 0.966272, -0.0704641)
bones/13/rotation = Quaternion(-0.466643, 0.000796706, -0.0567824, 0.882621)
bones/14/rotation = Quaternion(0.752162, -0.0925511, 0.0541348, 0.650197)
bones/14/scale = Vector3(1, 1, 1)
bones/15/rotation = Quaternion(-0.000251317, 0.0695432, 0.996582, 0.0445942)
bones/16/rotation = Quaternion(-0.444652, -0.000345888, 0.0235185, 0.895395)
bones/17/rotation = Quaternion(0.848827, 0.058542, -0.00161907, 0.525417)
bones/19/position = Vector3(0.232943, 0.0765387, 0.0566081)
bones/19/rotation = Quaternion(-0.700951, 0.0739548, 0.0735115, 0.705545)
bones/21/position = Vector3(-0.208267, 0.0765352, -0.116403)
bones/21/rotation = Quaternion(-0.703038, -0.0500206, -0.0496561, 0.707651)

[node name="AnimationTree" type="AnimationTree" parent="."]
root_node = NodePath("../PersonModel")
tree_root = SubResource("AnimationNodeStateMachine_ifh8w")
advance_expression_base_node = NodePath("..")
anim_player = NodePath("../PersonModel/AnimationPlayer")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_mex0s")

[node name="NavigationAgent" type="NavigationAgent3D" parent="."]
target_desired_distance = 0.5
avoidance_enabled = true

[node name="JumpTestRay" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.679902, 0.733303, 0, -0.733303, 0.679902, 0, 0.190617, 0)
target_position = Vector3(0, -0.4, 0)

[node name="UtilityAI" type="Node" parent="."]
script = ExtResource("3_5ihs5")
motives = SubResource("Resource_ysh3t")
weights = SubResource("Resource_simjm")

[connection signal="link_reached" from="NavigationAgent" to="." method="_on_navigation_agent_link_reached"]
[connection signal="navigation_finished" from="NavigationAgent" to="." method="_on_navigation_agent_navigation_finished"]
[connection signal="target_reached" from="NavigationAgent" to="." method="_on_navigation_agent_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent" to="." method="_on_navigation_agent_velocity_computed"]
[connection signal="move_to" from="UtilityAI" to="." method="_on_utility_ai_move_to"]
[connection signal="pick_up" from="UtilityAI" to="." method="_on_utility_ai_pick_up"]
[connection signal="stop_move_to" from="UtilityAI" to="." method="_on_utility_ai_stop_move_to"]

[editable path="PersonModel"]
